--- a/style.css
+++ b/style.css
@@ -210,3 +210,9 @@
 .dap {
   transform: rotate(180deg);
 }
+@media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
